Corrección final para entrega de proyecto final

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organizzate | Inicio</title>
-    <meta name="description" content="Ordeno y organizo tus espacios para transformar y simplificar tu vida.">
+    <meta name="description" content="Ordeno y organizo tus espacios para simplificar tu vida. Agendá una organización a domicilio o virtual para transformar tu hogar u oficina">
     <meta name="keywords"
         content="orden, organización, ordenar, organizar, consejos para ordenar, organizadora profesional, ordeno tu casa, marie kondo, the home edit">
     <link rel="shortcut icon" href="./assets/logos/headerblack.png" type="image/x-icon">
@@ -112,23 +112,33 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h3 class="footer-title ps-3">
+                    <h3 class="footer-title ms-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list ps-3">
-                        <li class="mb-2">
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/icono-inicio.png"
+                                alt="Icono Inicio">
                             <a href="#" class="footer-link">Inicio</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/icono-organizzate.png"
+                                alt="Icono Organizzate">
                             <a href="./pages/organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/icono-servicios.png"
+                                alt="Icono Servicios">
                             <a href="./pages/servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/icono-inspirate.png"
+                                alt="Icono Inspirate">
                             <a href="./pages/inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="./assets/images/icono-contacto.png"
+                                alt="Icono Contacto">
                             <a href="./pages/contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
@@ -139,17 +149,20 @@
                     </h3>
                     <ul class="footer-list">
                         <li>
-                            <img class="iconos-footer-img" src="./assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <img class="iconos-footer-img" src="./assets/images/icono-whatsapp.png"
+                                alt="Icono Whatsapp">
                             <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
                                 class="footer-link">Whatsapp </a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="./assets/images/instagram.png" alt="Icono Instagram">
+                            <img class="iconos-footer-img" src="./assets/images/icono-instagram.png"
+                                alt="Icono Instagram">
                             <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
                                 class="footer-link">Instagram</a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="./assets/images/facebook.png" alt="Icono Facebook">
+                            <img class="iconos-footer-img" src="./assets/images/icono-facebook.png"
+                                alt="Icono Facebook">
                             <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
                                 class="footer-link">Facebook</a>
                         </li>
