--- a/pages/inspirate.html
+++ b/pages/inspirate.html
@@ -53,8 +53,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div data-aos="fade-down">
-                        <h1 class="subtitulo">Inspirate</h1>
-                        <h2 class="subapartado">Descubrí más soluciones para establecer sistemas, simplificar rutinas y
+                        <h1 class="subtitulo-inspirate">Inspirate</h1>
+                        <h2 class="subapartado-inspirate">Descubrí más soluciones para establecer sistemas, simplificar rutinas y
                             organizar tus espacios.</h2>
                     </div>
                 </div>
@@ -70,10 +70,10 @@
                             <div class="card-body">
                                 <img src="../assets/images/iconolightbulbtips.png" class="iconos-inspirate-img"
                                     alt="Icono Lightbulb para consejos">
-                                <h3 class="card-title apartado"> Consejos para empezar a ordenar </h3>
-                                <p class="card-text texto">Empezá a ordenar tus espacios con estos simples consejos.</p>
+                                <h3 class="card-title apartado-inspirate"> Consejos para empezar a ordenar </h3>
+                                <p class="card-text texto-inspirate">Empezá a ordenar tus espacios con estos simples consejos.</p>
                                 <a rel="noopener nofollow" role="button"
-                                    class="btn btn-dark text-light text-decoration-none agendar"
+                                    class="btn btn-dark text-light text-decoration-none ver-inspirate"
                                     href="https://www.elmueble.com/decoracion/51-trucos-orden-infalibles_41749"
                                     target="_blank">Ver</a>
                             </div>
@@ -86,11 +86,11 @@
                             <div class="card-body">
                                 <img src="../assets/images/iconostarfavorites.png" class="iconos-inspirate-img"
                                     alt="Icono Star para favoritos">
-                                <h3 class="card-title apartado">Mis productos organizadores favoritos</h3>
-                                <p class="card-text texto">Agregale funcionalidad a tus espacios con estos productos.
+                                <h3 class="card-title apartado-inspirate">Mis productos organizadores favoritos</h3>
+                                <p class="card-text texto-inspirate">Agregale funcionalidad a tus espacios con estos productos.
                                 </p>
                                 <a rel="noopener nofollow" role="button"
-                                    class="btn btn-dark text-light text-decoration-none agendar"
+                                    class="btn btn-dark text-light text-decoration-none ver-inspirate"
                                     href="https://www.colombraro.com.ar/categoria/organizacion/organizadores/organizadores-varios/"
                                     target="_blank">Ver</a>
                             </div>
@@ -104,29 +104,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="logo-footer">
+                    <div>
                         <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
                         <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h3 class="footer-title ps-3">
+                    <h3 class="footer-title ms-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list ps-3">
-                        <li class="mb-2">
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inicio.png"
+                                alt="Icono Inicio">
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-organizzate.png"
+                                alt="Icono Organizzate">
                             <a href="./organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-servicios.png"
+                                alt="Icono Servicios">
                             <a href="./servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inspirate.png"
+                                alt="Icono Inspirate">
                             <a href="#" class="footer-link">Inspirate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-contacto.png"
+                                alt="Icono Contacto">
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
@@ -137,17 +147,20 @@
                     </h3>
                     <ul class="footer-list">
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <img class="iconos-footer-img" src="../assets/images/icono-whatsapp.png"
+                                alt="Icono Whatsapp">
                             <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
                                 class="footer-link">Whatsapp </a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
+                            <img class="iconos-footer-img" src="../assets/images/icono-instagram.png"
+                                alt="Icono Instagram">
                             <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
                                 class="footer-link">Instagram</a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
+                            <img class="iconos-footer-img" src="../assets/images/icono-facebook.png"
+                                alt="Icono Facebook">
                             <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
                                 class="footer-link">Facebook</a>
                         </li>
