--- a/pages/organizzate.html
+++ b/pages/organizzate.html
@@ -53,8 +53,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div data-aos="fade-down">
-                        <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
-                        <h2 class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
+                        <h1 class="subtitulo-organizzate">Conocé cómo funciona Organizzate</h1>
+                        <h2 class="texto-organizzate">Desde chica siempre disfruté de ordenar mis objetos y espacios,
                             y gracias a esta pasión por la organización simple y funcional nació Organizzate. </h2>
                     </div>
                 </div>
@@ -102,16 +102,32 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <ol class="listado">
-                            <li class="listado-item">Agendá una asesoría: para conocer tus necesidades y objetivos.</li>
-                            <li class="listado-item">Recibí un presupuesto estimado: según los espacios, el tiempo de
-                                organización y los
-                                productos a utilizar.</li>
-                            <li class="listado-item">Programá tu servicio de organización: incluye un plan de orden
-                                personalizado.</li>
-                            <li class="listado-item">Relajate mientras se transforma tu espacio: se te consultarán todas
-                                las dudas para
-                                dejar tus espacios totalmente organizados a tu medida.</li>
+                        <ol class="listado-organizzate">
+                            <li>
+                                <div class="ms-2 mb-4">
+                                    <div class="fw-bold">Agendá una asesoría:</div>
+                                    para conocer tus necesidades y objetivos.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ms-2 mb-4">
+                                    <div class="fw-bold">Recibí un presupuesto estimado:</div>
+                                    según los espacios, el tiempo de organización y los productos a utilizar.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ms-2 mb-4">
+                                    <div class="fw-bold">Programá tu servicio de organización:</div>
+                                    incluye un plan de orden personalizado.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ms-2 mb-4">
+                                    <div class="fw-bold">Relajate mientras se transforma tu espacio:</div>
+                                    se te consultarán todas las dudas para
+                                    dejar tus espacios totalmente organizados a tu medida.
+                                </div>
+                            </li>
                         </ol>
                     </div>
                 </div>
@@ -128,23 +144,33 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h3 class="footer-title ps-3">
+                    <h3 class="footer-title ms-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list ps-3">
-                        <li class="mb-2">
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inicio.png"
+                                alt="Icono Inicio">
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-organizzate.png"
+                                alt="Icono Organizzate">
                             <a href="#" class="footer-link">Organizzate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-servicios.png"
+                                alt="Icono Servicios">
                             <a href="./servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inspirate.png"
+                                alt="Icono Inspirate">
                             <a href="./inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-contacto.png"
+                                alt="Icono Contacto">
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
@@ -155,17 +181,20 @@
                     </h3>
                     <ul class="footer-list">
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <img class="iconos-footer-img" src="../assets/images/icono-whatsapp.png"
+                                alt="Icono Whatsapp">
                             <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
                                 class="footer-link">Whatsapp </a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
+                            <img class="iconos-footer-img" src="../assets/images/icono-instagram.png"
+                                alt="Icono Instagram">
                             <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
                                 class="footer-link">Instagram</a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
+                            <img class="iconos-footer-img" src="../assets/images/icono-facebook.png"
+                                alt="Icono Facebook">
                             <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
                                 class="footer-link">Facebook</a>
                         </li>
