--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -53,10 +53,9 @@
             <div class="container">
                 <div class="row text-center">
                     <div data-aos="fade-down">
-                        <h1 class="subtitulo">Servicios </h1>
-                        <h2 class="subapartado">Cada espacio tiene el potencial de funcionar de manera eficiente y verse
-                            hermoso a la vez. ¡Te ayudo a conquistar el desorden y mantenerlo a raya!
-                        </h2>
+                        <h1 class="subtitulo-servicios">Servicios </h1>
+                        <h2 class="subapartado-servicios">Cada espacio tiene el potencial de funcionar de manera eficiente y verse
+                            hermoso a la vez. ¡Te ayudo a conquistar el desorden y mantenerlo a raya!</h2>
                     </div>
                 </div>
             </div>
@@ -69,13 +68,13 @@
                             <img src="../assets/images/organizingclothes.png" class="card-img-top"
                                 alt="Imagen de mujer ordenado ropa en contenedores">
                             <div class="card-body">
-                                <h3 class="card-title apartado"> Organización a domicilio </h3>
-                                <p class="card-text texto">Ya sea que estés buscando una transformación completa o
+                                <h3 class="card-title apartado-servicios"> Organización a domicilio </h3>
+                                <p class="card-text texto-servicios">Ya sea que estés buscando una transformación completa o
                                     simplemente un toque final, el servicio a domicilio te brinda sistemas y soluciones
                                     que
                                     se adaptan a tu
                                     estilo de vida.</p>
-                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar"
+                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar-servicios"
                                     href="./contacto.html">Agendar</a>
                             </div>
                         </div>
@@ -85,12 +84,12 @@
                             <img src="../assets/images/workingwoman.png" class="card-img-top"
                                 alt="Imagen de mujer con la computadora trabajando">
                             <div class="card-body">
-                                <h3 class="card-title apartado">Organización virtual</h3>
-                                <p class="card-text texto">Si querés empezar a ordenar por tu cuenta pero necesitás
+                                <h3 class="card-title apartado-servicios">Organización virtual</h3>
+                                <p class="card-text texto-servicios">Si querés empezar a ordenar por tu cuenta pero necesitás
                                     ayuda (y motivación), el servicio virtual te brinda las herramientas necesarias para
                                     que puedas hacerlo a
                                     tu ritmo.</p>
-                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar"
+                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar-servicios"
                                     href="./contacto.html">Agendar</a>
                             </div>
                         </div>
@@ -103,29 +102,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="logo-footer">
+                    <div>
                         <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
                         <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h3 class="footer-title ps-3">
+                    <h3 class="footer-title ms-3">
                         Enlaces
                     </h3>
-                    <ul class="footer-list ps-3">
-                        <li class="mb-2">
+                    <ul class="footer-list">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inicio.png"
+                                alt="Icono Inicio">
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-organizzate.png"
+                                alt="Icono Organizzate">
                             <a href="./organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-servicios.png"
+                                alt="Icono Servicios">
                             <a href="#" class="footer-link">Servicios</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-inspirate.png"
+                                alt="Icono Inspirate">
                             <a href="./inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li class="mb-2">
+                        <li>
+                            <img class="iconos-footer-img" src="../assets/images/icono-contacto.png"
+                                alt="Icono Contacto">
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
@@ -136,17 +145,20 @@
                     </h3>
                     <ul class="footer-list">
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
+                            <img class="iconos-footer-img" src="../assets/images/icono-whatsapp.png"
+                                alt="Icono Whatsapp">
                             <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
                                 class="footer-link">Whatsapp </a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
+                            <img class="iconos-footer-img" src="../assets/images/icono-instagram.png"
+                                alt="Icono Instagram">
                             <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
                                 class="footer-link">Instagram</a>
                         </li>
                         <li>
-                            <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
+                            <img class="iconos-footer-img" src="../assets/images/icono-facebook.png"
+                                alt="Icono Facebook">
                             <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
                                 class="footer-link">Facebook</a>
                         </li>
