Corregí unclosed elements

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,6 +108,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
